--- a/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/index.mdx
@@ -95,7 +95,7 @@ Einige Seiten der Dokumentation werden automatisch oder dynamisch generiert.
 
 | Seite | Pfad | Anmerkungen |
 | --------------- | ------- | ------- |
-| Apps-Katalog | `/pages/02.applications/01.catalog/apps.md` | Ruft [app.json](https://github.com/YunoHost/apps/blob/master/apps.json?target=_blank) ab und verarbeitet sie |
+| Apps-Katalog | `/pages/02.applications/01.catalog/apps.md` | Ruft [app.json](https://github.com/YunoHost/apps/blob/master/apps.toml) ab und verarbeitet sie |
 | Apps-Helfer | `pages/04.contribute/04.packaging_apps/11.helpers/package_apps_helpers.md` | Erstellt von diesem [Skript](https://github.com/YunoHost/yunohost/blob/dev/doc/generate_helper_doc.py?target=_blank) aus dieser [Vorlage](https://github.com/YunoHost/yunohost/blob/dev/doc/helper_doc_template.md?target=_blank) |
 | Pro-App-Dokumentation | `pages/02.applications/02.docs/docs.md` | Listet die Unterseiten im selben Verzeichnis auf, deren Header `taxonomy.category: docs, apps` enthält |
 
