--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/02.markdown_guide.mdx
@@ -137,7 +137,7 @@ S'affichera :
 
 ## Les listes
 
-Les listes permettent d'afficher une suite de textes dans une présentation facile, c'est ainsi que sont rédigés les index tels que celui de la page de la [documentation contributeur](/contributordoc).
+Les listes permettent d'afficher une suite de textes dans une présentation facile, c'est ainsi que sont rédigés les index tels que celui de la page de la [documentation contributeur](/contribute).
 
 ### Listes ordonnées
 
@@ -231,7 +231,7 @@ Pour créer un tableau, il faut utiliser la barre verticale `|` (appelé 'pipe')
 | **Un tableau** | Une colonne | Une seconde | Autant que l'on veut |
 |:--------------:|:-----------:|:-----------:|:--------------------:|
 | Une ligne formatée | | Et du **texte en gras** | Ou en *italique* |
-| D'autres lignes | |![une image](/img/cd.jpg) | [Ou un lien](/contributordoc) |
+| D'autres lignes | |![une image](/img/cd.jpg) | [Ou un lien](/contribute) |
 ```
 
 Ce qui affichera ça :
@@ -239,7 +239,7 @@ Ce qui affichera ça :
 | **Un tableau** | Une colonne | Une seconde | Autant que l'on veut |
 |:--------------:|:-----------:|:-----------:|:--------------------:|
 | Une ligne formatée | | Et du **texte en gras** | Ou en *italique* |
-| D'autres lignes | |![une image](/img/cd.jpg) | [Ou un lien](/contributordoc) |
+| D'autres lignes | |![une image](/img/cd.jpg) | [Ou un lien](/contribute) |
 
 ## Bloc de codes
 
