--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/05.write_documentation/index.mdx
@@ -96,7 +96,7 @@ Quelques pages de la documentation sont générées automatiquement ou dynamique
 
 | Page          | Chemin | Notes |
 |---------------|--------|-------|
-| Catalogue d'applications  | `/pages/02.applications/01.catalog/apps.md` | Récupère et traite le fichier [app.json](https://github.com/YunoHost/apps/blob/master/apps.json?target=_blank) |
+| Catalogue d'applications  | `/pages/02.applications/01.catalog/apps.md` | Récupère et traite le fichier [app.json](https://github.com/YunoHost/apps/blob/master/apps.toml) |
 | Apps helpers  | `pages/04.contribute/04.packaging_apps/11.helpers/packaging_apps_helpers.md` | Générée par ce [script](https://github.com/YunoHost/yunohost/blob/dev/doc/generate_helper_doc.py?target=_blank), à partir de ce [canevas](https://github.com/YunoHost/yunohost/blob/dev/doc/helper_doc_template.md?target=_blank) |
 | Documentation des apps | `pages/02.applications/02.docs/docs.md` | Liste les sous-pages du même dossier qui ont les clés `taxonomy.category: docs, apps` dans leur en-tête |
 
