--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.packaging_apps/60.advanced/50.packaging_apps_hooks.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.packaging_apps/60.advanced/50.packaging_apps_hooks.md
@@ -2,23 +2,21 @@
 title: Hooks
 ---
 
-YunoHost includes a hook mechanism triggered on a lot of operation changing the system. You can use this mechanism in order to extend the behaviour of a YunoHost command.
+YunoHost comprend un mécanisme de hooks déclenchés lors de nombreuses opérations modifiant le système. Vous pouvez utiliser ce mécanisme afin d'étendre le comportement d'une commande YunoHost.
 
-The most obvious case is adding a user. If you had a `post_user_create` hook, this hook will be triggered as soon as a user is added.
+Le cas le plus évident est l'ajout d'un utilisateur. Si vous aviez un hook `post_user_create`, ce hook sera déclenché dès qu'un utilisateur sera ajouté.
 
-## How to add a custom hook on a specific instance
+## Comment ajouter un hook personnalisé sur une instance spécifique
 
-:::tip
-Below we imagine we want to run a command after each user creation to add the user to samba user.
-:::
+!!! Nous imaginons ci-dessous que nous voulons lancer une commande après chaque création d'utilisateur pour ajouter l'utilisateur à l'utilisateur samba.
 
-You should create a directory with the name of the hooks into `/etc/yunohost/hooks.d/`:
+Vous devez créer un répertoire avec le nom des hooks dans `/etc/yunohost/hooks.d/` :
 
 ```bash
 mkdir -p /etc/yunohost/hooks.d/post_user_create
 ```
 
-Next create a bash script inside this directory prefixed by 2 numbers and a dash:
+Créez ensuite un script bash à l'intérieur de ce répertoire, préfixé par 2 chiffres et un tiret :
 
 ```bash
 nano /etc/yunohost/hooks.d/post_user_create/05-add-user-to-samba
@@ -31,14 +29,14 @@ chown root:root /etc/yunohost/hooks.d/post_user_create
 chmod u+rx /etc/yunohost/hooks.d/post_user_create
 ```
 
-## How to add a hook in an app package
+## Comment ajouter un hook dans un paquetage d'application
 
-If you are packaging an app, you should not set by yourself the hook into `/etc/yunohost/hooks.d` instead you should create a hooks dir at the root of your package.
+Si vous empaquetez une application, vous ne devez pas mettre vous-même le hook dans `/etc/yunohost/hooks.d` mais vous devez créer un répertoire hooks à la racine de votre paquet.
 
 ```text
 .
-├── conf
-├── hooks
+├─── conf
+├─── hooks
 ├── scripts
 ```
 
