--- a/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.packaging_apps/60.advanced/30.sso_ldap_integration.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/06.contribute/10.packaging_apps/60.advanced/30.sso_ldap_integration.md
@@ -1,23 +1,23 @@
 ---
-title: SSO/LDAP integration
+title: Intégration SSO/LDAP
 ---
 
-One powerful aspect of YunoHost is that apps are meant to be integrated with the SSO/LDAP stack, such that users logged in on YunoHost's user portal can be directly logged in each app without having to create an account in each of them nor having to re-log in each app every time.
+Un aspect puissant de YunoHost est que les applications sont destinées à être intégrées à la pile SSO/LDAP, de sorte que les utilisateurs connectés sur le portail utilisateur de YunoHost puissent être directement connectés à chaque application sans avoir à créer un compte dans chacune d'elles ni à avoir à recréer un compte. -connectez-vous à chaque application à chaque fois.
 
-It should be stressed that there are two different aspects here:
+Il convient de souligner qu’il y a ici deux aspects différents :
 
-- the LDAP integration, meaning that the user accounts in the app are directly mapped to YunoHost user accounts
-- the SSO integration, meaning that a user logged in on the YunoHost user portal is automatically logged in on the app as well.
+- l'intégration LDAP, ce qui signifie que les comptes d'utilisateurs de l'application sont directement mappés aux comptes d'utilisateurs YunoHost
+- l'intégration SSO, ce qui signifie qu'un utilisateur connecté sur le portail utilisateur YunoHost est également automatiquement connecté sur l'application.
 
-Sometimes, LDAP integration is possible, but not SSO integration (though the opposite would be really weird as LDAP integration is somewhat required for the SSO to work)
+Parfois, l'intégration LDAP est possible, mais pas l'intégration SSO (même si l'inverse serait vraiment étrange car l'intégration LDAP est quelque peu requise pour que le SSO fonctionne)
 
-The SSO system is handled by [SSOwat](https://github.com/YunoHost/ssowat) and also handles the "permission" system which defines wether or not a user (or anonymous visitor) can access the app.
+Le système SSO est géré par [SSOwat](https://github.com/YunoHost/ssowat) et gère également le système de « permissions » qui définit si un utilisateur (ou un visiteur anonyme) peut ou non accéder à l'application.
 
 ## LDAP integration
 
-LDAP is a de-facto standard when it comes to sharing a common user account database between multiple applications, hence its use in the context of YunoHost.
+LDAP est un standard de facto lorsqu'il s'agit de partager une base de données de comptes d'utilisateurs commune entre plusieurs applications, d'où son utilisation dans le contexte de YunoHost.
 
-However, each app does implement LDAP support in its own specific way (or doesn't), and needs to be provided with parameters to actually talk to YunoHost's LDAP database, usually via its config file. It is advise to look for real-life example of apps implementing these (such as Nextcloud, Wekan...) but you will usually need to provide:
+Cependant, chaque application implémente la prise en charge LDAP à sa manière (ou non) et doit être dotée de paramètres pour communiquer réellement avec la base de données LDAP de YunoHost, généralement via son fichier de configuration. Il est conseillé de rechercher des exemples concrets d'applications les mettant en œuvre (telles que Nextcloud, Wekan...), mais vous devrez généralement fournir :
 
 - LDAP host: `localhost` / `127.0.0.1`
 - LDAP port: `389`
@@ -28,7 +28,7 @@ However, each app does implement LDAP support in its own specific way (or doesn'
 - Display name attribute: `displayname`
 - Email attribute: `mail`
 
-TODO/FIXME: moar explanations? What is missing?
+TO-DO/FIX-ME: plus d'explications ? Que manque-t-il?
 
 ## SSO integration
 
@@ -44,6 +44,7 @@ Internally, SSOwat will on-the-fly inject theses different headers:
 |User email|the email of the authenticated user. Could be usefull for some app wich require an email for the username. Can be also used by some apps which populate all user infomration from the HTTP header instead of LDAP.|Yes|`YNH_USER_EMAIL`|with `getallheaders()["Ynh-User-Email"]` or `$_SERVER["HTTP_YNH_USER_EMAIL"]`|
 |User full name|The full name of the user. The full name of the user. Which is mostly used by some apps which populate all user infomration from the HTTP header instead of LDAP.|Yes|`YNH_USER_FULLNAME`|with `getallheaders()["Ynh-User-Fullname"]` or `$_SERVER["HTTP_YNH_USER_FULLNAME"]`|
 |The [HTTP Basic Auth Headers](https://en.wikipedia.org/wiki/Basic_access_authentication)|Like `Authorization: Basic <base64credentials>`. If used we should be sure that the app check the credential (user and password) before to validate the authentication. It's mainly used by apps which need the credential to authenticate to a internal service. By example most of webmail need the credential to pass the correct credential to the mail server.|No. A client can send a header and will be passed to the application. It's why the application must check the credential to be sure that the passed passord are correct.|`Authorization`|with `getallheaders()["Authorization"]` or `$_SERVER["HTTP_AUTHORIZATION"]`|
+
 
 ### Usage
 
@@ -87,9 +88,9 @@ sudo systemctl reload nginx.service
 
 ## Configuring SSOwat permissions for the app
 
-SSOwat permissions are configured using the 'permission' resource in your app's manifest.toml
+Les autorisations SSOwat sont configurées à l'aide de la ressource « autorisation » dans le fichier manifest.toml de votre application.
 
-If relevant, you can create "sub" permissions for your app, for instance to only allow a specific group of people to access the admin UI of the app. For example:
+Le cas échéant, vous pouvez créer des autorisations « secondaires » pour votre application, par exemple pour autoriser uniquement un groupe spécifique de personnes à accéder à l'interface utilisateur d'administration de l'application. Par exemple :
 
 ```toml
 [resources.permissions]
@@ -104,10 +105,10 @@ admin.show_tile = false    # This means that this permission won't correspond to
 admin.allowed = "admins"   # Initialize the access for the "admins" group ... You can also use an install question called `init_admin_permission` to let the server admin choose this.
 ```
 
-See the page about app resources for the full description of behavior and properties.
+Consultez la page sur les ressources de l'application pour la description complète du comportement et des propriétés.
 
-## Logging out on the app vs. Logging out of YunoHost
+## Déconnexion de l'application ou déconnexion de YunoHost
 
-A common [known issue](https://github.com/YunoHost/issues/issues/501) is that sometimes, logging out of YunoHost apps will not log people out of every app. This is for example the case for [Nextcloud](https://github.com/YunoHost-Apps/nextcloud_ynh/issues/19), because it uses its own authentication cookies which are not cleared when people log out of YunoHost. This is not trivial to fix.
+Un [problème connu](https://github.com/YunoHost/issues/issues/501) est que parfois, la déconnexion des applications YunoHost ne déconnectera pas les utilisateurs de chaque application. C'est par exemple le cas de [Nextcloud](https://github.com/YunoHost-Apps/nextcloud_ynh/issues/19), car il utilise ses propres cookies d'authentification qui ne sont pas effacés lorsque les gens se déconnectent de YunoHost. Ce n’est pas anodin à corriger.
 
-Similarly, logging out of the app doesn't necessarily log people from YunoHost entirely (which is more acceptable that clicking Log out and... not being logged out at all because you're still logged-in on the SSO, hence logged in on the app). Some YunoHost app do integrate custom patches such that the logout process of the app does automatically redirects to `https://domain.tld/yunohost/sso/?action=logout` which logs them out.
+De même, la déconnexion de l'application ne déconnecte pas nécessairement entièrement les personnes de YunoHost (ce qui est plus acceptable que de cliquer sur Se déconnecter et... de ne pas être déconnecté du tout car vous êtes toujours connecté sur le SSO, donc connecté sur l'application). Certaines applications YunoHost intègrent des correctifs personnalisés de sorte que le processus de déconnexion de l'application redirige automatiquement vers `https://domain.tld/yunohost/sso/?action=logout` qui les déconnecte.
